docs/handson/nova-demo-ingress-alb.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nova-demo-alb
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:ap-northeast-2:779929131770:certificate/18e29a36-c262-4932-a5dd-0c74a1f567fa'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  ingressClassName: alb
  rules:
    - host: '*.opencaffes.com'
    - http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: hello-reactjs
                port:
                  number: 80
#          - path: /lotto
#            pathType: Prefix
#            backend:
#              service:
#                name: lotto-vertx-svc
#                port:
#                  number: 8080
